%% المحاسبة والمحافظ والحوكمة والمنصة — المخطط 4 من 4
erDiagram
  companies ||--o{ wallets : "company_id"
  companies ||--o{ chart_of_accounts : "company_id"
  companies ||--o{ journal_entries : "company_id"
  companies ||--o{ policy_rules : "company_id"
  companies ||--o{ approval_workflows : "company_id"
  wallets ||--o{ wallet_transactions : "wallet_id"
  journal_entries ||--o{ journal_entry_lines : "journal_entry_id"
  approval_workflows ||--o{ approval_workflow_actions : "workflow_id"

  wallets {
    bigint id PK
    bigint company_id FK
    string type
    decimal balance
  }

  wallet_transactions {
    bigint id PK
    bigint wallet_id FK
    decimal amount
  }

  chart_of_accounts {
    bigint id PK
    bigint company_id FK
    string code
    string name
  }

  journal_entries {
    bigint id PK
    bigint company_id FK
    date entry_date
  }

  journal_entry_lines {
    bigint id PK
    bigint journal_entry_id FK
    bigint account_id FK
    decimal debit
    decimal credit
  }

  policy_rules {
    bigint id PK
    bigint company_id FK
    string name
  }

  approval_workflows {
    bigint id PK
    bigint company_id FK
    string status
  }

  platform_announcement_banners {
    bigint id PK
    boolean is_enabled
    text message
    string dismiss_token
  }
